:wastebasket: refactor: 清理过时代码与编译器警告